2012-06-13  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* doc/libshpde-doxygen-sasutil.doxy: Renamed
	libsphde-doxygen-sasutil.doxy.
	* doc/libshpde-doxygen-sph.doxy: Renamed libsphde-doxygen-sph.doxy.
	* src/sasindexkey.h: Fixed typo.
	* src/Makefile.in: Regenerated.
	* configure.ac: Changed libshpde* to libsphde*.
	* doc/Makefile.am: Likewise.
	* doc/Makefile.in: Regenerated.
	* Makefile.in: Regenerated.
	* aclocal.m4: Regenrated.
	* configure: Regenerated.
	* ltmain.sh: Regenerated.
	* m4/ltsugar.m4: Regenerated.
	* m4/ltversion.m4: Regenerated.

2012-06-13  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* doc/libshpde-doxygen-sph.doxy: Update the title for the manual.
	* doc/sphmaindox.h: Typo update of "mmaping" to "memory mapping".	

2012-06-11  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* configure.ac: Add -Wl,--no-as-needed,-lrt to LDFLAGS to fix buggy
	libtool that do not add the directive in the correct position.
	* configure: Regenerated from configure.ac.
	* src/sasstringbtreenode.h: Replace \note doxygen directive by
	\warning.
	* src/sphlflogentry.h: Add \todo, \note, and \warning doxygen
	directives.

2012-04-21  Steven Munroe  <sjmunroe@us.ibm.com>

	* doc/libshpde-doxygen-sph.doxy: Remove sasstringbtreenode.h.
	* doc/sphmaindox.h: Improve description of sphtimer.h and
	sphthread.h.
	* src/sascompoundheap.h: Add todo.
	* src/sasindex.cpp: Replace sasindex.h with sasindexpriv.h.
	* src/sasindex.h: Add todo. Remove externs for; SASIndexAlloc,
	SASIndexFree, SASIndexNearAlloc, SASIndexNearDealloc,
	SASIndexGetRootNode.
	* src/sasindexpriv.h: Fix includes, Fix field refs to structs.
	Add extern for; SASIndexAlloc, SASIndexFree, SASIndexNearAlloc,
	SASIndexNearDealloc, SASIndexGetRootNode.
	* src/saslock.h: Add todo.
	* src/sassim.h: Add todo.
	* src/sasstringbtree.h: Remove todo, add another.
	* src/sasstringbtreenode.h: Change note to warning.
	* src/sasstringbtreepriv.h: Fix includes, Fix field refs to structs.